language/move-lang/tests/move_check/naming/global_builtin_many_type_arguments.exp
error: 

   ┌── tests/move_check/naming/global_builtin_many_type_arguments.move:8:9 ───
   │
 8 │         borrow_global<R1, R2>(0x1);
   │         ^^^^^^^^^^^^^ Invalid call to builtin function: 'borrow_global'
   ·
 8 │         borrow_global<R1, R2>(0x1);
   │         -------------------------- Expected 1 type arguments but got 2
   │

error: 

   ┌── tests/move_check/naming/global_builtin_many_type_arguments.move:9:9 ───
   │
 9 │         exists<R1, R2, R3>(0x1);
   │         ^^^^^^ Invalid call to builtin function: 'exists'
   ·
 9 │         exists<R1, R2, R3>(0x1);
   │         ----------------------- Expected 1 type arguments but got 3
   │

error: 

    ┌── tests/move_check/naming/global_builtin_many_type_arguments.move:10:17 ───
    │
 10 │         R1 {} = move_from<R1, R2, R3, R4>(0x1);
    │                 ^^^^^^^^^ Invalid call to builtin function: 'move_from'
    ·
 10 │         R1 {} = move_from<R1, R2, R3, R4>(0x1);
    │                 ------------------------------ Expected 1 type arguments but got 4
    │

error: 

    ┌── tests/move_check/naming/global_builtin_many_type_arguments.move:11:9 ───
    │
 11 │         move_to_sender<R1, R2, R3, R4, R5>(R1{});
    │         ^^^^^^^^^^^^^^ Invalid call to builtin function: 'move_to_sender'
    ·
 11 │         move_to_sender<R1, R2, R3, R4, R5>(R1{});
    │         ---------------------------------------- Expected 1 type arguments but got 5
    │

